--- a/US_0/Data/Code/combine.ipynb
+++ b/US_0/Data/Code/combine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 17,
    "id": "0456a59d",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 18,
    "id": "2cde76b4",
    "metadata": {},
    "outputs": [],
@@ -31,19 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 19,
    "id": "cc15958b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(3096,)"
-      ]
-     },
-     "execution_count": 330,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3096,)\n",
+      "(619,)\n",
+      "(2477,)\n"
+     ]
     }
    ],
    "source": [
@@ -57,12 +56,17 @@
     "\n",
     "county_df = nan_df.drop(nan_df.nlargest(3, \"NaN count sum\").index)[\"GEOIDFQ\"]\n",
     "\n",
-    "county_df.shape"
+    "county_valid_df = county_df.sample(frac=0.2, random_state=42)\n",
+    "county_train_df = county_df[~county_df.isin(county_valid_df)]\n",
+    "\n",
+    "print(county_df.shape)\n",
+    "print(county_valid_df.shape)\n",
+    "print(county_train_df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 20,
    "id": "d6547828",
    "metadata": {},
    "outputs": [
@@ -72,7 +76,7 @@
        "(43518, 76)"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +90,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 21,
+   "id": "c4a99b23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = \"Median household income ($)\" # \"Owner-occupied [%]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e3e6653c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "window_size = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "56086528",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features = df_combined.columns.difference([\"GEOIDFQ\", \"year\", target])\n",
+    "\n",
+    "len(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "c5f0e4b8",
    "metadata": {},
    "outputs": [
@@ -96,7 +143,7 @@
        "(43344, 76)"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,40 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
-   "id": "c4a99b23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target = \"Median household income ($)\" # \"Owner-occupied [%]\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 334,
-   "id": "56086528",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "73"
-      ]
-     },
-     "execution_count": 334,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features = df_filtered.columns.difference([\"GEOIDFQ\", \"year\", target])\n",
-    "\n",
-    "len(features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 25,
    "id": "cab7963a",
    "metadata": {},
    "outputs": [
@@ -152,7 +166,7 @@
        "(43344, 76)"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,40 +185,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
-   "id": "e6e0283c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_sorted = df_norm.sort_values([\"GEOIDFQ\", \"year\"])\n",
-    "\n",
-    "#df_sorted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 26,
    "id": "69ef17de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "window_size = 3\n",
-    "windows = []\n",
-    "targets = []\n",
+    "df_vaild = df_norm[df_norm[\"GEOIDFQ\"].isin(county_valid_df)].sort_values([\"GEOIDFQ\", \"year\"])\n",
     "\n",
-    "for id, group in df_sorted.groupby(\"GEOIDFQ\"):\n",
+    "windows_valid = []\n",
+    "targets_valid = []\n",
     "\n",
+    "for id, group in df_vaild.groupby(\"GEOIDFQ\"):\n",
     "        features_x_df = group[features].to_numpy()\n",
     "        features_y_df = group[target].to_numpy()[window_size-1:]\n",
     "\n",
     "        window = sliding_window_view(features_x_df, (window_size, features_x_df.shape[1]))[:, 0, :]\n",
-    "        windows.append(window)\n",
-    "        targets.append(features_y_df)"
+    "        windows_valid.append(window)\n",
+    "        targets_valid.append(features_y_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 27,
+   "id": "b21b8d5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = df_norm[df_norm[\"GEOIDFQ\"].isin(county_train_df)].sort_values([\"GEOIDFQ\", \"year\"])\n",
+    "\n",
+    "windows_train = []\n",
+    "targets_train = []\n",
+    "\n",
+    "for id, group in df_train.groupby(\"GEOIDFQ\"):\n",
+    "        features_x_df = group[features].to_numpy()\n",
+    "        features_y_df = group[target].to_numpy()[window_size-1:]\n",
+    "\n",
+    "        window = sliding_window_view(features_x_df, (window_size, features_x_df.shape[1]))[:, 0, :]\n",
+    "        windows_train.append(window)\n",
+    "        targets_train.append(features_y_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "df3778bd",
    "metadata": {},
    "outputs": [
@@ -212,26 +235,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(37152, 3, 73) (37152,)\n"
+      "(7428, 3, 73) (7428,)\n",
+      "(29724, 3, 73) (29724,)\n"
      ]
     }
    ],
    "source": [
-    "data_x = np.vstack(windows)\n",
-    "data_y = np.concatenate(targets)\n",
+    "data_valid_x = np.vstack(windows_valid)\n",
+    "data_valid_y = np.concatenate(targets_valid)\n",
+    "data_train_x = np.vstack(windows_train)\n",
+    "data_train_y = np.concatenate(targets_train)\n",
     "\n",
-    "print(data_x.shape, data_y.shape)"
+    "print(data_valid_x.shape, data_valid_y.shape)\n",
+    "print(data_train_x.shape, data_train_y.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 29,
    "id": "6d97e71b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"../Data/data_x_\" + target + \".npy\", data_x)\n",
-    "np.save(\"../Data/data_y_\" + target + \".npy\", data_y)"
+    "np.save(\"../Data/data_valid_x_\" + target + \".npy\", data_valid_x)\n",
+    "np.save(\"../Data/data_valid_y_\" + target + \".npy\", data_valid_y)\n",
+    "np.save(\"../Data/data_train_x_\" + target + \".npy\", data_train_x)\n",
+    "np.save(\"../Data/data_train_y_\" + target + \".npy\", data_train_y)"
    ]
   }
  ],
