--- a/US_0/Model/Code/model.ipynb
+++ b/US_0/Model/Code/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "id": "85efd939",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "<torch._C.Generator at 0x1cfadb780d0>"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "id": "668e5c3b",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 125,
    "id": "344bac65",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "id": "352ec98d",
    "metadata": {},
    "outputs": [],
@@ -69,16 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "55ba889a",
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = data_train_x.shape[0]\n",
-    "\n",
-    "#epochs: 50\n",
-    "#256 : 0.924 0.904\n",
-    "#data_train_x.shape[0] : 0.894 0.878\n",
     "\n",
     "dataset_train = TensorDataset(data_train_x, data_train_y)\n",
     "dataloader_train = DataLoader(dataset_train, batch_size=batch_size, shuffle=True, num_workers=5) \n",
@@ -88,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "fe8ce45b",
    "metadata": {},
    "outputs": [],
@@ -108,15 +104,13 @@
     "        \n",
     "\n",
     "    def forward(self, input):\n",
-    "        #x = F.dropout(input, p=0.2)\n",
+    "        x = F.dropout(input, p=0.75)\n",
     "\n",
     "        x, _ = self.lstm(input)\n",
     "        x = x[:, -1, :]\n",
-    "        #x = F.dropout(x, p=0.2)\n",
     "\n",
     "        x = self.dense1(x)\n",
     "        x = F.leaky_relu(x)\n",
-    "        #x = F.dropout(x, p=0.2)\n",
     "\n",
     "        x = self.dense2(x)\n",
     "        x = F.sigmoid(x)\n",
@@ -126,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "7cc1823e",
    "metadata": {},
    "outputs": [],
@@ -144,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 130,
    "id": "cef776ef",
    "metadata": {},
    "outputs": [
@@ -287,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 131,
    "id": "d3ce390a",
    "metadata": {},
    "outputs": [
@@ -295,7 +289,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9393501463347836\n"
+      "0.9393501444530278\n"
      ]
     }
    ],
@@ -308,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 132,
    "id": "82d3a3a2",
    "metadata": {},
    "outputs": [
@@ -316,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9205098068395161\n"
+      "0.9205098027606192\n"
      ]
     }
    ],
@@ -329,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 133,
    "id": "8a41662e",
    "metadata": {},
    "outputs": [
@@ -362,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 134,
    "id": "a7a29c5d",
    "metadata": {},
    "outputs": [],
