second model  india - generalization error 3e7, r2 score = 0.33

--- a/India/IHDS.ipynb
+++ b/India/IHDS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "f0538ab2-8e8e-4618-8800-a5dcd2fa5716",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "7ea8ef77-798b-4290-813f-66c89ddb7b10",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "\" Not used\\nihds3_ind = pd.read_csv('../../ICPSR_IHDS-1/DS0003/22626-0003-Data.tsv', sep='\\t', low_memory=False) # Medical\\nihds4_ind = pd.read_csv('../../ICPSR_IHDS-1/DS0004/22626-0004-Data.tsv', sep='\\t', low_memory=False) # Nonresident\\nihds5_ind = pd.read_csv('../../ICPSR_IHDS-1/DS0005/22626-0005-Data.tsv', sep='\\t', low_memory=False) # School\\nihds6_ind = pd.read_csv('../../ICPSR_IHDS-1/DS0006/22626-0006-Data.tsv', sep='\\t', low_memory=False) # Birth history\\nihds7_ind = pd.read_csv('../../ICPSR_IHDS-1/DS0007/22626-0007-Data.tsv', sep='\\t', low_memory=False) # Village\\nihds8_ind = pd.read_csv('../../ICPSR_IHDS-1/DS0008/22626-0008-Data.tsv', sep='\\t', low_memory=False) # Crop\\n\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "6a998ccd-91b2-4cf0-ac76-ba93e13061fd",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "' Not used\\nprint(ihds3_ind.shape)\\nprint(ihds4_ind.shape)\\nprint(ihds5_ind.shape)\\nprint(ihds6_ind.shape)\\nprint(ihds7_ind.shape)\\nprint(ihds8_ind.shape)\\n'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "ee93d5d3-d266-4072-af1e-4191606211a7",
    "metadata": {},
    "outputs": [
@@ -116,102 +116,103 @@
       "1    45\n",
       "2    22\n",
       "Name: ro5, dtype: int64\n",
-      "    stateid  distid  distname  person_id  household_id  sex  age  \\\n",
-      "0         1       2       102          1             1    1   50   \n",
-      "1         1       2       102          2             1    2   45   \n",
-      "2         1       2       102          3             1    1   22   \n",
-      "3         1       2       102          4             1    2   15   \n",
-      "4         1       2       102          5             1    1   13   \n",
-      "5         1       2       102          6             1    2    7   \n",
-      "6         1       2       102          1             2    1   69   \n",
-      "7         1       2       102          2             2    2   67   \n",
-      "8         1       2       102          3             2    1   35   \n",
-      "9         1       2       102          4             2    2   33   \n",
-      "10        1       2       102          5             2    1   14   \n",
-      "11        1       2       102          6             2    2   12   \n",
-      "12        1       2       102          7             2    1    6   \n",
-      "13        1       2       102          8             2    1   31   \n",
-      "14        1       2       102          9             2    2   26   \n",
-      "15        1       2       102         10             2    1    6   \n",
-      "16        1       2       102         11             2    2    1   \n",
-      "17        1       2       102         12             2    1   24   \n",
-      "18        1       2       102         13             2    2   19   \n",
-      "19        1       2       102         14             2    2    1   \n",
+      "   household_income  stateid  distid  distname  household_id  \\\n",
+      "0          52871.68        1       2       102             1   \n",
+      "1          262118.9        1       2       102             2   \n",
+      "2             80050        1       2       102             3   \n",
+      "3           39193.2        1       2       102             4   \n",
+      "4          434355.4        1       2       102             5   \n",
+      "5            102291        1       2       102             6   \n",
+      "6          14513.49        1       2       102             7   \n",
+      "7          41767.36        1       2       102             8   \n",
+      "8          44133.45        1       2       102             9   \n",
+      "9          652577.1        1       2       102            10   \n",
+      "10            15550        1       2       102            11   \n",
+      "11          35340.7        1       2       102            12   \n",
+      "12         16855.76        1       2       102            13   \n",
+      "13         71214.97        1       2       102            14   \n",
+      "14            25940        1       2       102            15   \n",
+      "15         35893.94        1       2       102            16   \n",
+      "16             2900        1       2       102            17   \n",
+      "17         140081.8        1       2       102            18   \n",
+      "18          32622.5        1       2       102            19   \n",
+      "19         34841.91        1       2       102            20   \n",
       "\n",
-      "    attended_school  enrolled_or_completed  years_of_education  ever_repeated  \\\n",
-      "0                 0                     -1                   0             -1   \n",
-      "1                 0                     -1                   0             -1   \n",
-      "2                 1                      0                   8              0   \n",
-      "3                 1                      0                   9              1   \n",
-      "4                 1                      1                   7              0   \n",
-      "5                 1                      1                   2              0   \n",
-      "6                 1                      0                  10              0   \n",
-      "7                 0                     -1                   0             -1   \n",
-      "8                 1                      0                  15              0   \n",
-      "9                 0                     -1                   0             -1   \n",
-      "10                1                      1                   7              0   \n",
-      "11                1                      1                   3              0   \n",
-      "12                1                      1                   0              0   \n",
-      "13                1                      0                  15              0   \n",
-      "14                1                      0                  12              0   \n",
-      "15                1                      1                   2              0   \n",
-      "16                0                     -1                   0             -1   \n",
-      "17                1                      0                  15              0   \n",
-      "18                1                      0                  12              0   \n",
-      "19                0                     -1                   0             -1   \n",
+      "    highest_adult_ed  highest_male_ed  highest_female_ed literate_ad  \\\n",
+      "0                  8                8                  0           1   \n",
+      "1                 15               15                 12           1   \n",
+      "2                  9                9                  0           1   \n",
+      "3                  0                0                  0           0   \n",
+      "4                  8                8                  0           1   \n",
+      "5                 10               10                  0           1   \n",
+      "6                  0                0                  0           0   \n",
+      "7                  0                0                  0           0   \n",
+      "8                  0                0                  0           0   \n",
+      "9                 12               12                  5           1   \n",
+      "10                 0                0                  0           0   \n",
+      "11                15               15                 12           1   \n",
+      "12                 8                8                  0           1   \n",
+      "13                 0                0                  0           0   \n",
+      "14                 0                0                  0           0   \n",
+      "15                12               12                  0           1   \n",
+      "16                 0               -1                  0           0   \n",
+      "17                15               15                  5           1   \n",
+      "18                 8                8                  0           1   \n",
+      "19                 0                0                  0           0   \n",
       "\n",
-      "   englisch_ability  highest_degree  household_income  caste Ann_earnings_tot  \\\n",
-      "0                 0              -1          52871.68      6            48000   \n",
-      "1                 0              -1          52871.68      6                    \n",
-      "2                 0              -1          52871.68      6            18000   \n",
-      "3                 1              -1          52871.68      6                    \n",
-      "4                 1              -1          52871.68      6                    \n",
-      "5                 0              -1          52871.68      6                    \n",
-      "6                 1              -1         262118.90      6                    \n",
-      "7                 0              -1         262118.90      6                    \n",
-      "8                 2               2         262118.90      6            84000   \n",
-      "9                 0              -1         262118.90      6                    \n",
-      "10                0              -1         262118.90      6                    \n",
-      "11                0              -1         262118.90      6                    \n",
-      "12                0              -1         262118.90      6                    \n",
-      "13                2               2         262118.90      6            84000   \n",
-      "14                1              -1         262118.90      6                    \n",
-      "15                0              -1         262118.90      6                    \n",
-      "16                0              -1         262118.90      6                    \n",
-      "17                2               2         262118.90      6            84000   \n",
-      "18                1              -1         262118.90      6            15600   \n",
-      "19                0              -1         262118.90      6                    \n",
+      "    Nhh_salaried  ...  Nhh_fam_bus  hhassets  owns_car  owns_computer  \\\n",
+      "0              2  ...            0        14         0              0   \n",
+      "1              4  ...            0        16                            \n",
+      "2              1  ...            0        11         0              0   \n",
+      "3              1  ...            0         3         0              0   \n",
+      "4              0  ...            3        11         0              0   \n",
+      "5              1  ...            0        13                            \n",
+      "6              0  ...            0         5         0              0   \n",
+      "7              0  ...            0         7         0              0   \n",
+      "8              1  ...            1         4         0              0   \n",
+      "9              2  ...            1        18         0              0   \n",
+      "10             0  ...            0         6         0              0   \n",
+      "11             2  ...            0        12         0              0   \n",
+      "12             1  ...            0         9         0              0   \n",
+      "13             1  ...            0        11         0              0   \n",
+      "14             0  ...            0         6         0              0   \n",
+      "15             1  ...            2        10         0              0   \n",
+      "16             0  ...            0         5         0              0   \n",
+      "17             3  ...            0        15         0              0   \n",
+      "18             1  ...            0         7         0              0   \n",
+      "19             1  ...            0         9         0              0   \n",
       "\n",
-      "    hhassets  \n",
-      "0         14  \n",
-      "1         14  \n",
-      "2         14  \n",
-      "3         14  \n",
-      "4         14  \n",
-      "5         14  \n",
-      "6         16  \n",
-      "7         16  \n",
-      "8         16  \n",
-      "9         16  \n",
-      "10        16  \n",
-      "11        16  \n",
-      "12        16  \n",
-      "13        16  \n",
-      "14        16  \n",
-      "15        16  \n",
-      "16        16  \n",
-      "17        16  \n",
-      "18        16  \n",
-      "19        16  \n"
+      "   npersons nchild  nadults  urban  metro  caste_rel  \n",
+      "0         6      2        3      0                 6  \n",
+      "1        15      6        8      0                 6  \n",
+      "2         7      4        2      0                 6  \n",
+      "3         5      3        2      0                 6  \n",
+      "4        10      3        5      0                 6  \n",
+      "5        15      7        7      0                 6  \n",
+      "6         9      4        2      0                 6  \n",
+      "7         6      4        2      0                 6  \n",
+      "8         9      6        2      0                 6  \n",
+      "9        12      3        6      0                 6  \n",
+      "10        5      3        2      0                 6  \n",
+      "11        4      2        2      0                 6  \n",
+      "12        7      3        2      0                 6  \n",
+      "13        7      5        2      0                 6  \n",
+      "14       10      6        2      0                 6  \n",
+      "15        8      3        5      0                 6  \n",
+      "16        5      2        1      0                 6  \n",
+      "17       11      3        6      0                 6  \n",
+      "18        6      4        2      0                 6  \n",
+      "19        8      4        4      0                 6  \n",
+      "\n",
+      "[20 rows x 22 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(ihds1_ind['ro5'].head(3))\n",
+    "print(ihds1_1_ind['ro5'].head(3))\n",
     "\n",
-    "column_map = {\n",
-    "    # Basic Features -----------------------------\n",
-    "    '''\n",
+    "# Basic Features -----------------------------\n",
+    "basic_column_map = { \n",
     "    'stateid': 'stateid',           # unique 33\n",
     "    'distid': 'distid',             # unique 61\n",
     "    'distname': 'distname',         # unique 375\n",
@@ -229,16 +230,38 @@
     "    'groups8': 'caste',             # unique 8\n",
     "    'ws8annual': 'Ann_earnings_tot',# unique 3052\n",
     "    'hhassets': 'hhassets',          # unique 31\n",
-    "    '''\n",
-    "    # More Features -----------------------------\n",
-    "    \n",
     "}\n",
     "\n",
+    "# More Features -----------------------------\n",
+    "more_column_map = {\n",
+    "    'INCOME': 'household_income',   # unique 21111\n",
+    "    'STATEID': 'stateid',             # unique 33\n",
+    "    'DISTID': 'distid',               # unique 61\n",
+    "    'DISTNAME': 'distname',           # unique 375\n",
+    "    'HHID': 'household_id',           # unique 52\n",
+    "    'HHED5ADULT': 'highest_adult_ed', # unique 16\n",
+    "    'HHED5M': 'highest_male_ed',      # unique 16\n",
+    "    'HHED5F': 'highest_female_ed',    # unique 16\n",
+    "    'HHED2': 'literate_ad',           # unique 2 (at least one literate adult in hh) \n",
+    "    'Nsalary': 'Nhh_salaried',        # unique 7 (paid monthly or annually)  \n",
+    "    'Nagwage': 'Nhh_ag_wage',         # unique 10 (paid daily and have agricultural occupation)  \n",
+    "    'Nnonag': 'Nhh_nonag_wage',       # unique 9 (paid daily and no ag occupation)  \n",
+    "    'Nbusiness': 'Nhh_fam_bus',       # unique 8\n",
+    "    'HHASSETS': 'hhassets',           # unique 31\n",
+    "    'CG18': 'owns_car',               # unique 2\n",
+    "    'CG21': 'owns_computer',          # unique 2\n",
+    "    'NPERSONS': 'npersons',           # unique 38 (# persons in hh)\n",
+    "    'NCHILD': 'nchild',               # unique 18\n",
+    "    'NADULTS': 'nadults',             # unique 19\n",
+    "    'URBAN': 'urban',                 # unique 2 (0-rural, 1-urban)\n",
+    "    'METRO6': 'metro',                # unique 7\n",
+    "    'GROUPS8': 'caste_rel',           # unique 8\n",
+    "}\n",
     "# 'mh3': 'marriage_status',\n",
     "# 'id20': 'father_education'\n",
     "\n",
-    "used_cols = list(column_map.keys())\n",
-    "features = ihds1_ind[used_cols].rename(columns=column_map)\n",
+    "used_cols = list(more_column_map.keys())\n",
+    "features = ihds1_2_hhl[used_cols].rename(columns=more_column_map)\n",
     "\n",
     "\n",
     "print(features.head(20))\n"
@@ -246,8 +269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "575f831a-41f1-4abb-9efb-d15f5a79d160",
+   "execution_count": 25,
+   "id": "c5124f9e-a7d2-42f3-86ff-93b5d92f21e4",
    "metadata": {},
    "outputs": [],
    "source": [
