--- a/India/NN1_ICPSR_IHDS-1.ipynb
+++ b/India/NN1_ICPSR_IHDS-1.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "11c8a14c-7192-48b2-9d99-374dcdcd8f24",
    "metadata": {
     "scrolled": true
@@ -210,13 +210,22 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 63132), started 0:01:32 ago. (Use '!kill 63132' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-aaf7c9dcaf57a4f7\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-5b808df17078a397\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-aaf7c9dcaf57a4f7\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-5b808df17078a397\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -237,10 +246,10 @@
     {
      "data": {
       "text/plain": [
-       "'\\nIncome\\n• Mean: 59659.41\\n• Minimum: -108327.80\\n• Maximum: 6520261.00\\n• Standard Deviation: 94614.89\\n'"
+       "'\\nto kill process\\npgrep -f tensorboard\\nkill -9 pid1 pid2 ...\\n\\nIncome\\n• Mean: 59659.41\\n• Minimum: -108327.80\\n• Maximum: 6520261.00\\n• Standard Deviation: 94614.89\\n'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
