--- a/US_0/Data/Code/combine.ipynb
+++ b/US_0/Data/Code/combine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "id": "0456a59d",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "id": "2cde76b4",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "id": "cc15958b",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "id": "d6547828",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
        "(43518, 76)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "c4a99b23",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "id": "e3e6653c",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "id": "56086528",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "73"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "id": "c5f0e4b8",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
        "(43344, 76)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 48,
    "id": "cab7963a",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "(43344, 76)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 49,
    "id": "69ef17de",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "id": "b21b8d5d",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "id": "df3778bd",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,8 @@
      "output_type": "stream",
      "text": [
       "(7428, 3, 73) (7428,)\n",
-      "(29724, 3, 73) (29724,)\n"
+      "(29724, 3, 73) (29724,)\n",
+      "(37152, 3, 73) (37152,)\n"
      ]
     }
    ],
@@ -245,14 +246,17 @@
     "data_valid_y = np.concatenate(targets_valid)\n",
     "data_train_x = np.vstack(windows_train)\n",
     "data_train_y = np.concatenate(targets_train)\n",
+    "data_x = np.concatenate([data_valid_x, data_train_x], axis=0)\n",
+    "data_y = np.concatenate([data_valid_y, data_train_y], axis=0)\n",
     "\n",
     "print(data_valid_x.shape, data_valid_y.shape)\n",
-    "print(data_train_x.shape, data_train_y.shape)"
+    "print(data_train_x.shape, data_train_y.shape)\n",
+    "print(data_x.shape, data_y.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 52,
    "id": "6d97e71b",
    "metadata": {},
    "outputs": [],
@@ -260,7 +264,9 @@
     "np.save(\"../Data/data_valid_x_\" + target + \".npy\", data_valid_x)\n",
     "np.save(\"../Data/data_valid_y_\" + target + \".npy\", data_valid_y)\n",
     "np.save(\"../Data/data_train_x_\" + target + \".npy\", data_train_x)\n",
-    "np.save(\"../Data/data_train_y_\" + target + \".npy\", data_train_y)"
+    "np.save(\"../Data/data_train_y_\" + target + \".npy\", data_train_y)\n",
+    "np.save(\"../Data/data_x_\" + target + \".npy\", data_x)\n",
+    "np.save(\"../Data/data_y_\" + target + \".npy\", data_y)"
    ]
   }
  ],
